--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,10 @@ footer address {
 .center{
 	text-align: center;
 }
+
+.tab-pane{
+	border-radius: 0px 0px 20px 20px;
+	border: solid rgb(230,230,230) 1px;
+	padding: 0 10px;
+	background-color: rgb(250,250,250);
+}
