--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@
     background-color: rgba(0,0,0,0.1);
 }
 
+.montserrat {
+	font-family: 'Montserrat', sans-serif;
+}
 
 .container {
 	/*border: solid red 2px;*/
