Carousel buttons hidden if screen size is below 600px

--- a/css/style.css
+++ b/css/style.css
@@ -129,5 +129,9 @@ footer address {
 	.carousel-caption, .carousel-indicators {
 		display: none;
 	}
+
+	#carouselButtons {
+		display: none;
+	}
 }
 /* Carousel END*/
