--- a/css/mystyle.less
+++ b/css/mystyle.less
@@ -163,3 +163,8 @@ div.well {
 	background-image: linear-gradient(to bottom,@brand-primary 0,@brand-primary 100%);
 	color: @white-color;
 }
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+	background-color: @brand-primary !important;
+	color: @white-color;
+}
