--- a/css/mystyle.less
+++ b/css/mystyle.less
@@ -168,3 +168,6 @@ div.well {
 	background-color: @brand-primary !important;
 	color: @white-color;
 }
+.media-body>h4, h2.media-heading {
+	display: inline;
+} 
