Comments in mystyle.less added

--- a/css/mystyle.less
+++ b/css/mystyle.less
@@ -154,20 +154,21 @@ textarea {
 tr:nth-child(odd) {
 	background-color: @light-ivory !important;
 }
-
 div.well {
 	background-image: linear-gradient(to bottom,@light-ivory 0,#ffffdd 100%);
 }
 
+// Change the panel heading color to primary
 .panel-default > .panel-heading {
 	background-image: linear-gradient(to bottom,@brand-primary 0,@brand-primary 100%);
 	color: @white-color;
 }
-
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
 	background-color: @brand-primary !important;
 	color: @white-color;
 }
+
+// This put label and label-pill after text in same line in menu.html
 .media-body>h4, h2.media-heading {
 	display: inline;
 } 
