--- a/css/mystyle.less
+++ b/css/mystyle.less
@@ -9,6 +9,28 @@
 // Height variables
 @affix-top: 120px;
 
+// Github button
+#gitButtonDiv{
+	position: absolute;
+	margin-top: 25rem;
+	margin-left: -110px;
+	padding-left: 0.5rem;
+	background-color: #444;
+	border-radius: 0px 5px 5px 0;
+	-webkit-transition: margin-left 2s; /* For Safari 3.1 to 6.0 */
+    transition: margin-left 2s;
+
+}
+#gitButtonDiv span {
+	color: @white-color;
+}
+#gitButtonDiv:hover {
+	margin-left: 0px;
+}
+#githubButton{
+	z-index: 100;
+}
+
 
 .zero-margin (@pad-up-dn: 0px, @pad-left-right: 0px) {
 	margin: 0px auto;
