--- a/css/mystyle.less
+++ b/css/mystyle.less
@@ -1,4 +1,4 @@
-// Colors
+/* Colors */
 @dark-ivory: #e6e2af;
 @light-ivory: #ffffcc;
 @footer-color: #046380;
@@ -6,10 +6,10 @@
 @white-color: #fff;
 @brand-primary: darken(#428bca, 6.5%);
 
-// Height variables
+/* Height variables */
 @affix-top: 120px;
 
-// Left side fixed buttons
+/* Left side fixed buttons for GIT and Linkedin */
 #gitButtonDiv{
 	position: fixed;
 	margin-top: 25rem;
@@ -52,7 +52,7 @@
 #linkedinButton{
 	z-index: 10;
 }
-// End of fixed buttons
+/* End of fixed buttons */
 
 .zero-margin (@pad-up-dn: 0px, @pad-left-right: 0px) {
 	margin: 0px auto;
@@ -159,7 +159,7 @@ footer address {
 	top: 120px;
 }
 
-/* Carousel bootstrap / contactus.html*/
+/* Carousel bootstrap / contactus.html */
 
 .carousel {
 	margin-top: 50px;
@@ -194,7 +194,7 @@ textarea {
 	width: 100%;
 }
 
-// Used for changing style of a table and well on aboutus.html
+/* Used for changing style of a table and well on aboutus.html */
 tr:nth-child(odd) {
 	background-color: @light-ivory !important;
 }
@@ -202,7 +202,7 @@ div.well {
 	background-image: linear-gradient(to bottom,@light-ivory 0,#ffffdd 100%);
 }
 
-// Change the panel heading color to primary
+/* Change the panel heading color to primary */
 .panel-default > .panel-heading {
 	background-image: linear-gradient(to bottom,@brand-primary 0,@brand-primary 100%);
 	color: @white-color;
@@ -212,7 +212,7 @@ div.well {
 	color: @white-color;
 }
 
-// This put label and label-pill after text in same line in menu.html
+/* This put label and label-pill after text in same line in menu.html */
 .media-body>h4, h2.media-heading {
 	display: inline;
 } 
